--- a/languages/wp-cas-server-pt_PT.po
+++ b/languages/wp-cas-server-pt_PT.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Cassava CAS Server\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/wp-cas-server\n"
-"POT-Creation-Date: 2015-05-06 21:31-0000\n"
+"Report-Msgid-Bugs-To: https://github.com/goblindegook/wp-cas-server\n"
+"POT-Creation-Date: 2016-02-12 23:18:11+00:00\n"
 "PO-Revision-Date: 2015-05-06 21:32-0000\n"
 "Last-Translator: Luís Rodrigues <hello@goblindegook.net>\n"
 "Language-Team: \n"
@@ -15,7 +15,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 1.8beta2\n"
 
-#: lib/Admin.php:50 lib/Admin.php:51
+#: lib/Admin.php:50 lib/Admin.php:51 wp-cas-server.php:43
 msgid "Cassava CAS Server"
 msgstr "Cassava CAS Server"
 
@@ -24,9 +24,9 @@ msgid ""
 "Cassava CAS Server requires that this site be configured for HTTPS. For more "
 "information, contact your system administrator or hosting provider."
 msgstr ""
-"O Cassava CAS Server precisa que este site se encontre configurado para HTTPS. "
-"Para mais informações, contacte o seu administrador de sistemas ou prestador de "
-"alojamento."
+"O Cassava CAS Server precisa que este site se encontre configurado para "
+"HTTPS. Para mais informações, contacte o seu administrador de sistemas ou "
+"prestador de alojamento."
 
 #: lib/Admin.php:134
 msgid "User Attributes To Return"
@@ -42,10 +42,11 @@ msgstr "Definições do Cassava CAS Server"
 
 #: lib/Admin.php:201
 msgid ""
-"Configuration panel for the Central Authentication Service provided by this site."
+"Configuration panel for the Central Authentication Service provided by this "
+"site."
 msgstr ""
-"Painel de configuração para o Serviço Central de Autenticação (CAS) prestado por "
-"este site."
+"Painel de configuração para o Serviço Central de Autenticação (CAS) prestado "
+"por este site."
 
 #: lib/Admin.php:231
 msgid "First Name"
@@ -77,10 +78,11 @@ msgstr "(ex: %s)"
 
 #: lib/Admin.php:272
 msgid ""
-"Checked attributes are disclosed on successful validation requests (CAS 2.0 only)."
+"Checked attributes are disclosed on successful validation requests (CAS 2.0 "
+"only)."
 msgstr ""
-"Os atributos assinalados serão disponibilizados aquando de pedidos de validação "
-"com êxito (CAS 2.0 apenas)."
+"Os atributos assinalados serão disponibilizados aquando de pedidos de "
+"validação com êxito (CAS 2.0 apenas)."
 
 #: lib/CAS/Controller/ValidateController.php:105
 msgid "Ticket is required."
@@ -98,15 +100,20 @@ msgstr "O ticket não corresponde ao service indicado."
 msgid "Unknown error"
 msgstr "Erro desconhecido"
 
-#: lib/CAS/Server.php:190
+#: lib/CAS/Server.php:185
+#, fuzzy
+msgid "The CAS server requires SSL."
+msgstr "O servidor CAS está desativado."
+
+#: lib/CAS/Server.php:197
 msgid "The CAS server is disabled."
 msgstr "O servidor CAS está desativado."
 
-#: lib/CAS/Server.php:204
+#: lib/CAS/Server.php:212
 msgid "The controller for the route is invalid."
 msgstr "O controlador para a rota é inválido."
 
-#: lib/CAS/Server.php:235
+#: lib/CAS/Server.php:243
 msgid "The server does not support the method requested."
 msgstr "O servidor não suporta o método pedido."
 
@@ -151,7 +158,8 @@ msgid "Luís Rodrigues"
 msgstr "Luís Rodrigues"
 
 #. Author URI of the plugin/theme
-msgid "http://goblindegook.net/"
+#, fuzzy
+msgid "http://goblindegook.com/"
 msgstr "http://goblindegook.net/"
 
 #~ msgid "The handler for the route is invalid."
