--- a/languages/wp-cas-server.pot
+++ b/languages/wp-cas-server.pot
@@ -1,25 +1,37 @@
-# Copyright (C) 2015 Cassava: A WordPress CAS Server
+# Copyright (C) 2016 Luís Rodrigues
 # This file is distributed under the same license as the Cassava: A WordPress CAS Server package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Cassava: A WordPress CAS Server 1.2.1\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/wp-cas-server\n"
-"POT-Creation-Date: 2015-05-06 20:29:47+00:00\n"
+"Project-Id-Version: Cassava: A WordPress CAS Server 1.2.3\n"
+"Report-Msgid-Bugs-To: https://github.com/goblindegook/wp-cas-server\n"
+"POT-Creation-Date: 2016-02-12 23:19:28+00:00\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2016-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Luís Rodrigues <hello@goblindegook.net>\n"
+"Language-Team: Luís Rodrigues <hello@goblindegook.net>\n"
+"X-Generator: grunt-wp-i18n 0.5.3\n"
+"X-Poedit-KeywordsList: "
+"__;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;_nx_noop:1,2,3c;esc_"
+"attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;esc_html_x:1,2c;\n"
+"Language: en_US\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Country: United States\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-Bookmarks: \n"
+"X-Textdomain-Support: yes\n"
 
-#: lib/Admin.php:50 lib/Admin.php:51
+#: lib/Admin.php:50 lib/Admin.php:51 wp-cas-server.php:43
 msgid "Cassava CAS Server"
 msgstr ""
 
 #: lib/Admin.php:84
 msgid ""
-"Cassava CAS Server requires that this site be configured for HTTPS. For more "
-"information, contact your system administrator or hosting provider."
+"Cassava CAS Server requires that this site be configured for HTTPS. For "
+"more information, contact your system administrator or hosting provider."
 msgstr ""
 
 #: lib/Admin.php:134
@@ -90,15 +102,19 @@ msgstr ""
 msgid "Unknown error"
 msgstr ""
 
-#: lib/CAS/Server.php:190
+#: lib/CAS/Server.php:185
+msgid "The CAS server requires SSL."
+msgstr ""
+
+#: lib/CAS/Server.php:197
 msgid "The CAS server is disabled."
 msgstr ""
 
-#: lib/CAS/Server.php:204
+#: lib/CAS/Server.php:212
 msgid "The controller for the route is invalid."
 msgstr ""
 
-#: lib/CAS/Server.php:235
+#: lib/CAS/Server.php:243
 msgid "The server does not support the method requested."
 msgstr ""
 
@@ -143,5 +159,5 @@ msgid "Luís Rodrigues"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://goblindegook.net/"
+msgid "http://goblindegook.com/"
 msgstr ""
